ci: adds to `secretlint` the rule to avoid commiting `.env` files

--- a/.secretlintrc.json
+++ b/.secretlintrc.json
@@ -2,6 +2,9 @@
   "rules": [
     {
       "id": "@secretlint/secretlint-rule-preset-recommend"
+    },
+    {
+      "id": "@secretlint/secretlint-rule-no-dotenv"
     }
   ]
 }
