--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "async-retry": "1.3.3",
     "bcryptjs": "3.0.2",
+    "cookie": "1.0.2",
     "dotenv": "16.4.5",
     "dotenv-expand": "11.0.6",
     "next": "14.2.5",
@@ -59,7 +60,8 @@
     "jest": "29.7.0",
     "lint-staged": "15.5.0",
     "prettier": "3.5.2",
-    "secretlint": "9.3.1"
+    "secretlint": "9.3.1",
+    "set-cookie-parser": "2.7.1"
   },
   "config": {
     "commitizen": {
